tests/paczka1/fuzzy1/94484534.err
Error in line 2: 3Qp S524 28,9
Error in line 1: woC S436 56,9
Error in line 14: woC S524 55,1
Error in line 16: woC A490 29,8
Error in line 35: 3Qp A380 10,0
